--- a/HTML/PSD to HTML/css/home.css
+++ b/HTML/PSD to HTML/css/home.css
@@ -64,6 +64,19 @@ img {
     max-width: 100%;
 }
 
+ol {
+    counter-reset: item
+}
+
+li {
+    display: block
+}
+
+li:before {
+    content: counters(item, ".") " ";
+    counter-increment: item
+}
+
 /* body {
     border: 1px solid black;
 } */
