--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
@@ -9,6 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="mt-5 d-flex justify-content-center justify-content-md-center col-12 col-lg-3">
+                
                 <div>
                     <div class="border p-5">
                         <div class="ps-1" id="userImgDiv">
@@ -17,7 +18,7 @@
                         </div>
 
                        <input type = "file" id="userInputImg" accept=".jpg, .jpeg, .png" hidden />
-                        <div class="mt-1 ps-2 p-lg-0">@Model.FirstName @Model.LastName</div>
+                        <div class="mt-1 ps-2 p-lg-0 user-name">@Model.FirstName @Model.LastName</div>
                         <a href="" data-bs-toggle="modal" data-bs-target="#passwordModal"
                            class="font-size text-secondary ms-3 ms-lg-1 mt-1 text-decoration-none">
                             Change
@@ -59,42 +60,9 @@
                 </div>
             </div>
 
+            
 
-
-
-            <div class="modal" id="contactUsModal" tabindex="-1">
-                <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-header border-0">
-                            <h5 class="modal-title">Contact Us</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <label for="name" class="form-label text-secondary">Name*</label>
-                            <input type="text" class="form-control bg-body-secondary" placeholder="Smith Doh"
-                                   id="name">
-                            <label for="email" class="form-label text-secondary mt-3">Email Address*</label>
-                            <input type="text" id="email" class="form-control bg-body-secondary"
-                                   placeholder="Smith doh1234@gmail.com">
-                            <label for="subject" class="form-label text-secondary mt-3">Subject*</label>
-                            <input type="password" id="subject" class="form-control"
-                                   placeholder="Enter your Subject">
-                            <label for="message" class="form-label text-secondary mt-3">Message*</label>
-                            <textarea id="message" cols="30" rows="3" class="form-control"
-                                      placeholder="Enter your Message"></textarea>
-                        </div>
-                        <div class="modal-footer border-0">
-                            <a class="btn border-secondary rounded-pill px-4 py-2 text-secondary"
-                               data-bs-dismiss="modal">Cancle</a>
-                            <button class="btn border rounded-pill px-4 py-2 orange-btn"
-                                    style="border-color: #F88634 !important">
-                                Save
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          
 
 
             <div class="modal" id="skillModal" tabindex="-1">
@@ -106,25 +74,25 @@
                                     aria-label="Close"></button>
                         </div>
                         <div class="modal-body d-flex justify-content-between">
-                            <div class="border ps-3 py-3 pe-5">
-                                <ul class="skill-list px-0">
-                                    @foreach(var skill in Model.SkillsList)
+                            <div class="border">
+                                <ul class="skill-list p-0">
+                                    @foreach(var skill in Model.SkillsList!)
                                     {
-                                    <li>@skill.SkillName</li>
+                                        <li class="skill-li ps-3 py-2 pe-5">@skill.SkillName</li>
                                     }
                                 </ul>
                             </div>
                             <div class="d-flex flex-column justify-content-center">
-                                <div><button class="border-0 bg-white text-secondary">></button></div>
+                                <div><button class="border-0 bg-white text-secondary skill-transfer-btn">></button></div>
                                 <div>
-                                    <button class="border-0 bg-white text-secondary">
+                                    <button class="border-0 bg-white text-secondary skill-transfer-btn">
                                         <
                                     </button>
                                 </div>
                             </div>
-                            <div class="border ps-3 py-3 pe-5">
-                                <ul class="skill-list px-0">
-                                    <li>second div</li>
+                            <div class="border">
+                                <ul class="skill-list p-0">
+                                    <li class="skill-li ps-3 py-2 pe-5">second div</li>
                                 </ul>
                             </div>
                         </div>
@@ -141,6 +109,7 @@
             </div>
            
             <div class="p-5 col-12 col-lg-8">
+                
                  <form>
                 <div class="border-bottom">
                     <div class="head-border pb-3 fs-4">Basic Information</div>
@@ -214,7 +183,7 @@
                                 <label for="city-filter" class="form-label">City</label>
                                 <select id="city-filter" class="form-select text-secondary" asp-for="CityId">
                                 <option selected disabled>Select your city</option>
-                                @foreach(var city in Model.Cities)
+                                @foreach(var city in Model.Cities!)
                                     {
                                         <option value="@city.CityId" >@city.Name</option>
                                     }
@@ -225,7 +194,7 @@
                                 <label for="country-filter" class="form-label">Country*</label>
                                 <select asp-for="CountryId" id="country-filter" class="form-select text-secondary">
                                 <option selected disabled>Select your country</option>
-                                @foreach(var country in Model.Countries)
+                                @foreach(var country in Model.Countries!)
                                     {
                                         <option value="@country.CountryId">@country.Name</option>
                                     }
