--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
@@ -44,7 +44,7 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
               
                 <li><a class="dropdown-item" asp-action="UserEditProfile" asp-controller="Home" asp-route-id="@userId">My Profile</a></li>
-                 <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" asp-action="TimeSheet" asp-controller="Home" asp-route-id="@userId">Volunteering Timesheet</a></li>
                 <li><a class="dropdown-item" asp-action="Logout" asp-controller="Home">Logout</a></li>
             </ul>
         }
