--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/TimeSheet.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/TimeSheet.cshtml
@@ -1,12 +1,14 @@
-﻿
+﻿@model List<CIPlatform.entities.ViewModels.TimeSheetViewModel>
 @{
     var userId = Context.Session.GetString("userId");
 }
 <partial name = "_Navbar1" />
 
-<partial name ="_VolTimeSheet" />
+<div id="volTimeSheetPartial"><partial name="_VolTimeSheet" /></div>
 
-<div id="modalPartial"></div>
+<div id="goalModalPartial"></div>
+
+<div id ="hourModalPartial"</div>
 
 <partial name="_Footer" />
 
@@ -15,4 +17,4 @@
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
-}
+}   
