--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
@@ -75,25 +75,34 @@
                         </div>
                         <div class="modal-body d-flex justify-content-between">
                             <div class="border">
-                                <ul class="skill-list p-0">
-                                    @foreach(var skill in Model.SkillsList!)
+                                    @if(Model.UserSkills.Count() > 0)
+                                {
+                                    foreach(var userSkill in Model.UserSkills)
                                     {
-                                        <li class="skill-li ps-3 py-2 pe-5">@skill.SkillName</li>
+                                    <input type ="hidden" value="@userSkill.SkillId" class="hidden-skills"/>
                                     }
-                                </ul>
+                                }
+                                <select class="skill-list p-0 skillSelect" id="leftDivSelect" multiple>
+                                        @foreach (var skill in Model.SkillsList!)
+                                        {
+                                            
+                                            <option value="@skill.SkillId" class="skill-li ps-3 py-2 pe-5">@skill.SkillName</option>
+                                        }
+                                    }
+                                </select>
                             </div>
                             <div class="d-flex flex-column justify-content-center">
-                                <div><button class="border-0 bg-white text-secondary skill-transfer-btn">></button></div>
+                                <div><button class="border-0 bg-white text-secondary skill-transfer-btn" id="rightArrow">></button></div>
                                 <div>
-                                    <button class="border-0 bg-white text-secondary skill-transfer-btn">
+                                    <button class="border-0 bg-white text-secondary skill-transfer-btn" id="leftArrow">
                                         <
                                     </button>
                                 </div>
                             </div>
                             <div class="border">
-                                <ul class="skill-list p-0">
-                                    <li class="skill-li ps-3 py-2 pe-5">second div</li>
-                                </ul>
+                                <select class="skill-list p-0 skillSelect" id="rightDivSelect" multiple>
+                                    
+                                </select>
                             </div>
                         </div>
                         <div class="modal-footer border-0 d-flex justify-content-start">
@@ -234,14 +243,9 @@
                             <div class="head-border pb-3 fs-4">My Skills</div>
                         </div>
                         <div class="mt-3">
-                            <div class="border ps-2 py-2 text-secondary mt-3 mt-sm-0">
-                                <div>Anthropology</div>
-                                <div>Anthropology</div>
-                                <div>Anthropology</div>
-                                <div>Anthropology</div>
-                                <div>Anthropology</div>
-                                <div>Anthropology</div>
-                            </div>
+                            <textarea class="border ps-2 py-2 text-secondary mt-3 mt-sm-0" id="skillTextArea">
+                                
+                            </textarea>
                         </div>
                     </div>
 
@@ -269,6 +273,8 @@
 @section Scripts{
     <partial name ="_ValidationScriptsPartial" />
     <script src="~/js/editProfile.js"></script>
+   
+        
 }
 
 <partial name ="_Footer" />
