--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Layout.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/css/fg-responsive.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/registration-responsive.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
 
     <link rel="stylesheet" href="~/CIPlatformWeb.styles.css" asp-append-version="true" />
 
