--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
@@ -36,7 +36,8 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                         </div>
-                        <form id="editPasswordForm">  
+                        <form id="editPasswordForm">
+                            
                         <div class="modal-body">
                             <input type="hidden" value="userId" name="userId" />
                             <input type="password" class="form-control" id="oldPassword" asp-for = "OldPassword" placeholder="Enter old password">
@@ -64,62 +65,62 @@
 
           
 
-
-            <div class="modal" id="skillModal" tabindex="-1">
-                <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-header border-0">
-                            <h5 class="modal-title">Add your Skills</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body d-flex justify-content-between">
-                            <div class="border">
-                                    @if(Model.UserSkills.Count() > 0)
-                                {
-                                    foreach(var userSkill in Model.UserSkills)
-                                    {
-                                    <input type ="hidden" value="@userSkill.SkillId" class="hidden-skills"/>
-                                    }
-                                }
-                                <select class="skill-list p-0 skillSelect" id="leftDivSelect" multiple>
-                                        @foreach (var skill in Model.SkillsList!)
-                                        {
-                                            
-                                            <option value="@skill.SkillId" class="skill-li ps-3 py-2 pe-5">@skill.SkillName</option>
-                                        }
-                                    }
-                                </select>
-                            </div>
-                            <div class="d-flex flex-column justify-content-center">
-                                <div><button class="border-0 bg-white text-secondary skill-transfer-btn" id="rightArrow">></button></div>
-                                <div>
-                                    <button class="border-0 bg-white text-secondary skill-transfer-btn" id="leftArrow">
-                                        <
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="border">
-                                <select class="skill-list p-0 skillSelect" id="rightDivSelect" multiple>
-                                    
-                                </select>
-                            </div>
-                        </div>
-                        <div class="modal-footer border-0 d-flex justify-content-start">
-                            <a class="btn border-secondary rounded-pill px-4 py-2 text-secondary"
-                               data-bs-dismiss="modal">Cancle</a>
-                            <button class="btn border rounded-pill px-4 py-2 orange-btn"
-                                    style="border-color: #F88634 !important">
-                                Save
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
            
             <div class="p-5 col-12 col-lg-8">
                 
-                 <form>
+                 <form asp-action="SaveUserDetail" asp-controller="Home" id="userProfileForm" method="post" asp-area="users">
+                    <input type="hidden" value="@userId" name="userId" />
+                    <div class="modal" id="skillModal" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header border-0">
+                                    <h5 class="modal-title">Add your Skills</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body d-flex justify-content-between">
+                                    <div class="border">
+                                        @if (Model.UserSkills.Count() > 0)
+                                        {
+                                            foreach (var userSkill in Model.UserSkills)
+                                            {
+                                                <input type="hidden" value="@userSkill.SkillId" class="hidden-skills" />
+                                            }
+                                        }
+                                        <select class="skill-list p-0 skillSelect" id="leftDivSelect" multiple >
+                                            @foreach (var skill in Model.SkillsList!)
+                                            {
+
+                                                <option value="@skill.SkillId" class="skill-li ps-3 py-2 pe-5" data-skillname="@skill.SkillName">@skill.SkillName</option>
+                                            }
+                                            }
+                                        </select>
+                                    </div>
+                                    <div class="d-flex flex-column justify-content-center">
+                                        <div><button type = "button" class="border-0 bg-white text-secondary skill-transfer-btn" id="rightArrow">></button></div>
+                                        <div>
+                                            <button type = "button" class="border-0 bg-white text-secondary skill-transfer-btn" id="leftArrow">
+                                                <
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="border">
+                                        <select class="skill-list p-0 skillSelect" id="rightDivSelect" name="userSkillsId" multiple>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="modal-footer border-0 d-flex justify-content-start">
+                                    <a class="btn border-secondary rounded-pill px-4 py-2 text-secondary"
+                                       data-bs-dismiss="modal">Cancle</a>
+                                    <button type = "button" class="btn border rounded-pill px-4 py-2 orange-btn"
+                                            style="border-color: #F88634 !important" id="saveSkillBtn">
+                                        Save
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 <div class="border-bottom">
                     <div class="head-border pb-3 fs-4">Basic Information</div>
                 </div>
@@ -128,14 +129,14 @@
                     <div class="col-12 col-md-6">
                         <label for="name" class="form-label">Name*</label>
                             
-                        <input type="text" id="name"  asp-for="FirstName" class="form-control text-secondary"
+                        <input type="text" id="name" name="firstName" asp-for="FirstName" class="form-control text-secondary"
                                placeholder="Enter your name">
                             <span asp-validation-for="FirstName" class="text-danger error-span"></span>
                     </div>
                     <div class="col-12 col-md-6 mt-3 mt-sm-0">
 
                         <label for="surname" class="form-label">Surname*</label>
-                        <input type="text" id="surname" class="form-control text-secondary"
+                        <input type="text" id="surname" name="lastName" class="form-control text-secondary"
                                placeholder="Enter your surname" asp-for="LastName">
                             <span asp-validation-for="LastName" class="text-danger error-span"></span>
                     </div>
@@ -163,7 +164,7 @@
 
                         <label for="department" class="form-label">Department</label>
                         <input type="text" id="department" class="form-control text-secondary"
-                               placeholder="Enter your department" asp-for="Department">
+                               placeholder="Enter your department" asp-for="Department"> 
                             <span asp-validation-for="Department" class="text-danger error-span"></span>
                     </div>
 
@@ -190,7 +191,7 @@
                     <div class="row mt-md-3 mt-sm-0 mt-3">
                         <div class="col-12 col-md-6">
                                 <label for="city-filter" class="form-label">City</label>
-                                <select id="city-filter" class="form-select text-secondary" asp-for="CityId">
+                                <select id="city-filter" class="form-select text-secondary" asp-for="CityId" >
                                 <option selected disabled>Select your city</option>
                                 @foreach(var city in Model.Cities!)
                                     {
@@ -201,7 +202,7 @@
                         </div>
                         <div class="col-12 col-md-6 mt-3 mt-sm-0">
                                 <label for="country-filter" class="form-label">Country*</label>
-                                <select asp-for="CountryId" id="country-filter" class="form-select text-secondary">
+                                <select asp-for="CountryId" id="country-filter" class="form-select text-secondary" >
                                 <option selected disabled>Select your country</option>
                                 @foreach(var country in Model.Countries!)
                                     {
@@ -221,7 +222,7 @@
                         <div class="row mt-2 mt-md-3">
                             <div class="col-12 col-md-6 mt-3 mt-sm-0">
                                 <label for="availbility" class="form-label">Availbility</label>
-                                <select id="availbility" class="form-select text-secondary">
+                                <select id="availbility" class="form-select text-secondary" asp-for="Avaibility">
                                     <option selected disabled>Select your availability</option>
                                         <option value="0">Daily</option>
                                         <option value="1">Weekly</option>
@@ -231,7 +232,7 @@
                             </div>
                             <div class="col-12 col-md-6 mt-3 mt-sm-0">
                                 <label for="linkdin" class="form-label">LinkedIn</label>
-                                <input type="text" id="linkdin" class="form-control text-secondary"
+                                <input type="text" id="linkdin" class="form-control text-secondary" 
                                        placeholder="Enter linkedIn URL" asp-for="LinkedinURL">
                                     <span asp-validation-for="LinkedinURL" class="text-danger error-span"></span>
                             </div>
