--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -17,11 +17,11 @@
             <img src="~/images/cross.png" alt="">
         </div>
         <div class="mt-5 ms-3">NAVIGATION</div>
-        <a class="text-decoration-none text-white d-block mt-3 ps-3">
-            <img src="~/images/user (4).png" alt="">
+        <a class="text-decoration-none text-white d-block mt-3 ps-3" id="userBtn">
+            <img src="~/images/user (4).png" alt="" >
             User
         </a>
-        <a class=" text-decoration-none d-block mt-5 cms-page text-white">
+        <a class=" text-decoration-none d-block mt-5 cms-page text-white" id= "cmsPageBtn">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  class="bi bi-file-earmark" id="page" viewBox="0 0 16 16">
                 <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z" />
@@ -29,27 +29,27 @@
             CMS
             Page
         </a>
-        <a class="text-decoration-none text-white d-block mt-5 ps-3">
+        <a class="text-decoration-none text-white d-block mt-5 ps-3" id="missionBtn">
             <img src="~/images/target (1).png" class="pe-3"
                  alt=""> Mission
         </a>
-        <a class="text-decoration-none text-white d-block mt-5 ps-3">
+        <a class="text-decoration-none text-white d-block mt-5 ps-3" id="missionThemeBtn">
             <img src="~/images/themes.png" class="pe-3"
                  alt="">Mission Theme
         </a>
-        <a class="text-decoration-none text-white d-block mt-5 ps-3">
+        <a class="text-decoration-none text-white d-block mt-5 ps-3" id="missionSkillBtn">
             <img src="~/images/skills (1).png" class="pe-3"
                  alt="">Mission Skills
         </a>
-        <a class="text-decoration-none text-white d-block  mt-5 ps-3">
+        <a class="text-decoration-none text-white d-block  mt-5 ps-3" id="missionApplicationBtn">
             <img src="~/images/folder.png" class="pe-3"
                  alt="">Mission Application
         </a>
-        <a class="text-decoration-none text-white d-block mt-5 ps-3">
+        <a class="text-decoration-none text-white d-block mt-5 ps-3" id="storyBtn">
             <img src="~/images/tale.png" class="pe-3"
                  alt="">Story
         </a>
-        <a class="text-decoration-none text-white d-block mt-5 ps-3">
+        <a class="text-decoration-none text-white d-block mt-5 ps-3" id="bannerBtn">
             <img src="~/images/folded-ribbon.png"
                  class="pe-3" alt="">Banner Management
         </a>
@@ -90,14 +90,22 @@
                 </div>
             </div>
         </nav>
-        <div id="userPartial"></div>
+        <div id="adminPartial"></div>
 
         <div id = "addUserModalPartial"></div>
         <div id="editUserModalPartial"></div>
+        
+
+
+        
 
     </div>
 </div>
 
 @section scripts{
     <script src="~/js/admin.js"></script>
+
+    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
+    
 }
