--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_User.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_User.cshtml
@@ -64,7 +64,7 @@
                                 <img src="~/images/editing.png" alt=""data-userid="@user.userId"  class="edit-user">
                                 @if (@user.Status == 1)
                                 {
-                                    <img src="~/images/restore.svg" id="deleteUser" alt="" data-userid="@user.userId" data-status="@user.Status" class="delete-user">
+                                    <img src="~/images/restore.svg" id="restoreImg" alt="" data-userid="@user.userId" data-status="@user.Status" class="delete-user">
 
                                 }
                                 else{
