--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_CMS.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_CMS.cshtml
@@ -8,7 +8,7 @@
 </div>
 <div class="d-flex justify-content-between">
     <div class="mt-3">
-        <input type="search" placeholder="Search" class="form-control">
+            <input type="search" placeholder="Search" id="searchInput" class="form-control">
     </div>
 
     <div class="mt-3">
@@ -55,11 +55,16 @@
                         }
                         <td class="">
                     <div class="d-flex gap-3">
-                        <img src="~/images/editing.png" alt="" data-cmsid = "@cms.CmsPageId" id="editCms">
-                        
-                                <img src="~/images/bin.png" alt="" data-cmsid="@cms.CmsPageId" id="deleteCms">
-                        
-                    </div>
+                        <img src="~/images/editing.png" alt="" data-cmsid = "@cms.CmsPageId" class="edit-cms" data-status = "@cms.Status">
+                                @if (!cms.Status)
+                                {
+                                    <img src="~/images/bin.png" alt="" data-cmsid="@cms.CmsPageId" class="delete-cms" data-status="@cms.Status">
+                                }
+                                else
+                                {
+                                    <img src="~/images/restore.svg" id="restoreImg" alt="" data-cmsid="@cms.CmsPageId" class="delete-cms" data-status="@cms.Status">
+                                }
+                            </div>
 
                 </td>
             </tr>
