--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_EditGoalMission.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_EditGoalMission.cshtml
@@ -9,7 +9,7 @@
         <input type="hidden" id="missionDoc" data-docname="@doc.DocumentName" data-doctype="@doc.DocumentType" data-docpath="@doc.DocumentPath" />
     }
     <div class="border border-2">
-        <div class="py-2 px-4 bg-light fs-4 border-bottom border-2">Add Mission</div>
+        <div class="py-2 px-4 bg-light fs-4 border-bottom border-2">Edit Mission</div>
         <div class="d-grid gap-3 p-4 color-darkgray">
             <div>
                 <label class="form-label">Title</label>
@@ -159,6 +159,7 @@
                             }
                         }
                     </select>
+
                     <span class="font-size text-danger" id="skillError"></span>
                 </div>
             </div>
@@ -173,5 +174,11 @@
             Save
         </button>
     </div>
+
+    
+                    @foreach(var missionSkill in Model.MissionSkills)
+                    {
+                        <input type = "hidden" value="@missionSkill.SkillId" asp-for="MissionSkills">
+                    }
 </form>
 <partial name="_ValidationScriptsPartial"></partial>
