--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
@@ -282,16 +282,20 @@
             </div>
 
 
+             @foreach (var user in Model.MissionApplications)
+                    {
+                if (user.ApprovalStatus != 1)
+                {
 
-
-            <div class="d-flex justify-content-center">
-                <a href="#" class="btn apply-btn mt-3 mb-3 px-5 ">
-                    Apply Now <img src="~/images/right-arrow.png"
+                    <div class="d-flex justify-content-center">
+                        <a href="#" class="btn apply-btn mt-3 mb-3 px-5 ">
+                            Apply Now <img src="~/images/right-arrow.png"
                                    alt="#">
-                </a>
-            </div>
-
-        </div>
+                        </a>
+                    </div>
+                }
+                    }
+                </div>
 
 
 
