all mighty push once more!

--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -101,6 +101,7 @@
 </div>
 
 @section scripts{
+    <script src="~/js/adminPagination.js"></script> 
     <script src="~/js/admin.js"></script>
 
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
