--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
@@ -18,10 +18,8 @@
             Policy
             <img class="m-1" src="~/images/drop-down.png" alt="#">
         </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" asp-action="PolicyPage" asp-controller="Home">Privacy and Cookies Policy</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <ul class="dropdown-menu cms-dropdown" aria-labelledby="dropdownMenuButton1">
+           
         </ul>
 
     </div>
