--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_Mission.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_Mission.cshtml
@@ -62,6 +62,13 @@
                             <td>@mission.EndDate?.ToString("d")</td>
                             <td class="">
                                 <div class="d-flex gap-3">
+                                     @if (mission.MissionType == true && mission.EndDate < DateTime.Now && mission.Status == true)
+                            {
+                                <img src="/images/stop-circle.svg"
+                                class="cursor-pointer d-inline width-max-conatent me-2" alt="edit"
+                                height="20px" width="20px"
+                                data-stop="@mission.MissionId">
+                            }
                                     <img src="~/images/editing.png" alt="" class ="edit-mission" data-missionid = "@mission.MissionId" data-missiontype = "@mission.MissionType">
                                     
                                     @if(mission.IsActive)
@@ -84,3 +91,4 @@
             </div>
 
 </div>
+<div class="pagination d-flex justify-content-end gap-1 px-3 my-4"></div>
