--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
@@ -11,7 +11,7 @@
 <section class="mt-3 container p-0" id="mainContent">
     <!-- grid view  -->
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 grid-view">
-        <input type="hidden" value="@missionCount" id="filterMissionCnt" />
+        <input type="hidden" value="@missionCount" id="missionCount" />
         @foreach (var missions in Model.MissionList)
         {
             <div class="col grid-mission">
@@ -66,11 +66,15 @@
                         <div class="d-flex justify-content-between px-3">
                             <div class="org-name">@missions.OrgName</div>
                             <div>
+
+                                @for(int i = 0; i < @missions.MissionRate; i++){
+                                    
                                 <img src="~/images/selected-star.png" alt="">
-                                <img src="~/images/selected-star.png" alt="">
-                                <img src="~/images/selected-star.png" alt="">
+                                }
+                                @for(int i = 0; i < 5 - @missions.MissionRate; i++){
+                                    
                                 <img src="~/images/star.png" alt="">
-                                <img src="~/images/star.png" alt="">
+                                }
                             </div>
                         </div>
                         @if (missions.MissionType == true)
@@ -118,15 +122,19 @@
                                     </div>
                                     <div class="d-flex align-items-center">
                                         <img class="h-50" src="~/images/achieved.png" alt="#">
+                                            @{
+                                                var goalA = missions.GoalMissions.GoalAchieved;
+                                                var goalV = missions.GoalMissions.GoalValue;
+                                                var perc = goalA * 100 / goalV;
+                                            }
 
                                         <div class="ms-2">
                                             <div class="progress">
-                                                <div class="progress-bar w-75" role="progressbar" aria-valuenow="50"
+                                                <div class="progress-bar " style="width: @perc%;" role="progressbar" aria-valuenow="@perc"
                                              aria-valuemin="0" aria-valuemax="100">
                                                 </div>
                                             </div>
-
-                                            <span class="m-0 p-0">8000 achieved</span>
+                                            <span class="m-0 p-0">@missions.GoalMissions.GoalAchieved achieved</span>
 
                                         </div>
                                     </div>
